--- a/LabSes1/LabSes1.csproj
+++ b/LabSes1/LabSes1.csproj
@@ -41,6 +41,7 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -90,7 +91,13 @@
     <Compile Include="DB\Patient.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DB\Role.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="DB\Service.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\Status.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\sysdiagrams.cs">
@@ -105,6 +112,9 @@
     <Compile Include="Pages\barcode.xaml.cs">
       <DependentUpon>barcode.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\GeneratedOrder.xaml.cs">
+      <DependentUpon>GeneratedOrder.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\PageAddPacient.xaml.cs">
       <DependentUpon>PageAddPacient.xaml</DependentUpon>
     </Compile>
@@ -118,6 +128,10 @@
       <DependentUpon>MakeOrderWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Pages\barcode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\GeneratedOrder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
